--- a/public/styles/site/_work.scss
+++ b/public/styles/site/_work.scss
@@ -118,7 +118,7 @@
 	}
 	@include breakpoint ($small) {
 		height: auto;
-		margin-bottom: 10px;
+		margin-bottom: 25px;
 	}
 }
 
